src/components/(UIBasics)/components/Table/styles.module.css
.horizontalTableContainer {
	overflow-x: scroll;
	width: 100%;
	background-color: var(--cl-gray-700);
	margin-bottom: var(--sp-2);
	border-radius: var(--rd-md);
	table-layout: fixed;
	box-shadow: 0px 0px 3px var(--cl-gray-900);

	& tbody > .horizontalTableRow {
		width: 100%;

		& > th {
			word-break: break-all;
			width: auto;
			overflow: hidden;
		}
		& > td {
			padding: var(--sp-1);
			word-break: break-all;
			width: auto;
			overflow: hidden;
		}

		&:first-child th {
			border-top-left-radius: var(--rd-md);
		}
		&:last-child th {
			border-bottom-left-radius: var(--rd-md);
		}
		&:first-child td:last-child {
			border-top-right-radius: var(--rd-md);
		}
		&:first-child th:last-child {
			border-top-right-radius: var(--rd-md);
		}
		&:last-child th:last-child {
			border-bottom-right-radius: var(--rd-md);
		}
	}
}

.verticalTableContainer {
	width: 100%;
	overflow-x: scroll;
	background-color: var(--cl-gray-700);
	margin-bottom: var(--sp-2);
	border-radius: var(--rd-md);
	table-layout: fixed;
	box-shadow: 0px 0px 3px var(--cl-gray-900);

	& thead tr {
		& th {
			background-color: var(--cl-gray-800);
			padding: var(--sp-1);
			word-break: break-all;
		}
		& th:first-child {
			border-top-left-radius: var(--rd-md);
		}
		& th:last-child {
			border-top-right-radius: var(--rd-md);
		}
	}
	& tbody tr {
		& td {
			word-break: break-all;
		}
		& td:first-child {
			border-bottom-left-radius: var(--rd-md);
		}
		& td:last-child {
			border-bottom-right-radius: var(--rd-md);
		}
	}
}

